--- a/class/index.html
+++ b/class/index.html
@@ -459,10 +459,10 @@
                             <td></td>
                         </tr>
                         <tr>
-                            <td colspan="2"></td>
-                            <td class="ce va">-</td>
+                            <td class="ce va" colspan="2">-</td>
                             <td class="ce va">-</td>
                             <td></td>
+                            <td class="ce va">-</td>
                             <td class="ce va">-</td>
                             <td></td>
                         </tr>
@@ -481,42 +481,111 @@
                             <td class="ce va">UI 설계 및 구현</td>
                             <td class="ce va">168</td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="ce va">2001020708_19v3 UI 구현</td>
+                            <td class="ce va">168</td>
                             <td></td>
                         </tr>
                         <tr> <!--7줄-->
                             <td class="ce va">UI 테스트 수행</td>
                             <td class="ce va">40</td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="ce va">2001020709_19v3 UI 테스트</td>
+                            <td class="ce va">40</td>
                             <td></td>
                         </tr>
                         <tr> <!--8줄-->
                             <td class="ce va" rowspan="2">UI/UX 요구 분석 및<br>기획</td>
                             <td class="ce va"rowspan="2">80</td>
                             <td rowspan="2"></td>
-                            <td></td>
-                            <td></td>
+                            <td class="ce va">2001020704_19v3 UI/UX 요구 분석</td>
+                            <td class="ce va">40</td>
                             <td></td>
                         </tr>
                         <tr> <!--9줄-->
-                            <td></td>
-                            <td></td>
+                            <td class="ce va">2001020705_19v2 UI/UX 콘셉트 기획</td>
+                            <td class="ce va">40</td>
                             <td></td>
                         </tr>
                         <tr> <!--10줄-->
                             <td class="ce va" rowspan="2">GUI 디자인</td>
                             <td class="ce va" rowspan="2">208</td>
                             <td rowspan="2"></td>
-                            <td></td>
-                            <td></td>
+                            <td class="ce va">2001020707_19v3 UI/UX 디자인</td>
+                            <td class="ce va">168</td>
                             <td></td>
                         </tr>
                         <tr> <!--11줄-->
+                            <td class="ce va">2001020706_19v2 UI 아키텍쳐 설계</td>
+                            <td class="ce va">40</td>
                             <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <table class="table table-bordered"> <!--첫번째 칸-->
+                    <tbody>
+                        <tr></tr>
+                          <td class="ce va" colspan="2">구분</td>
+                          <td class="ce va">교과목명</td>
+                          <td class="ce va">훈련시간</td>
+                          <td class="ce va">훈련교사</td>
+                          <td class="ce va">능력단위분류번호<br>능력단위명 (단원명)</td>
+                          <td class="ce va">훈련시간</td>
+                          <td class="ce va">비고</td>
+                        </tr>
+
+                        <tr>
+                            <td rowspan="8"></td>
+                            <td rowspan="8"></td>
+                            <td class="ce va" rowspan="2">UI 설계 및 구현</td>
+                            <td class="ce va" rowspan="2">144</td>
+                            <td rowspan="2"></td>
+                            <td class="ce va">2001020224_19v5<br>화면 설계</td>
+                            <td class="ce va">72</td>
                             <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va">2001020225_19v5<br>화면 구현</td>
+                            <td class="ce va">72</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va" rowspan="2">프로그래밍 기술 활용</td>
+                            <td class="ce va" rowspan="2">120</td>
+                            <td rowspan="2"></td>
+                            <td class="ce va">2001020230_19v4<br>프로그래밍 언어 응용</td>
+                            <td class="ce va">60</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va">2001020231_19v5<br>프로그래밍 언어 활용</td>
+                            <td class="ce va">60</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va"rowspan="2">애플리케이션 테스트 및 배포</td>
+                            <td class="ce va" rowspan="2">70</td>
+                            <td rowspan="2"></td>
+                            <td class="ce va">2001020227_19v5<br>애플리케이션 테스트 수행</td>
+                            <td class="ce va">40</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va">2001020214_19v5<br>애플리케이션 배포</td>
+                            <td class="ce va">30</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va" rowspan="2">스마트 문화 앱</td>
+                            <td class="ce va" rowspan="2">120</td>
+                            <td rowspan="2"></td>
+                            <td class="ce va">0803020913_19v5<br>스마트문화웹 구현</td>
+                            <td class="ce va">60</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="ce va">0803020905_19v5<br>스마트문화웹 시스템 설계</td>
+                            <td class="ce va">60</td>
                             <td></td>
                         </tr>
                     </tbody>
