--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="row" id="middle" style="margin-left:16px;">
         <div id="container" class="clearfix">
 
-          <!-- box -->
+          <!-- box class -->
           <section class="color-shape class">
             <a href="class/index.html" target="_blank">
               <div class="image-wrap">
@@ -160,11 +160,11 @@
               </div>
             </a>
           </section>
-          <!-- //box -->
+          <!-- //box class -->
 
-          <!-- box -->
+          <!-- box javascript -->
           <section class="color-shape script">
-            <a href="#" target="_blank">
+            <a href="javascript/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
@@ -181,7 +181,49 @@
               </div>
             </a>
           </section>
-          <!-- //box -->
+          <!-- //box javascript -->
+
+          <!-- box html -->
+          <section class="color-shape script">
+            <a href="html/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">HTML</span>
+                  <span class="overlay-text-thumb-donut">HTML</span>
+                  <span class="overlay-text-thumb1-donut">HTML</span>
+                  <span class="overlay-text-thumb2-donut">HTML</span>
+                </div>
+                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>HTML</h5>
+                  <p>HTML</p>
+                  <span>HTML</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box html -->
+
+          <!-- box css -->
+          <section class="color-shape script">
+            <a href="css/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">CSS</span>
+                  <span class="overlay-text-thumb-donut">CSS</span>
+                  <span class="overlay-text-thumb1-donut">CSS</span>
+                  <span class="overlay-text-thumb2-donut">CSS</span>
+                </div>
+                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>CSS</h5>
+                  <p>CSS</p>
+                  <span>CSS</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box css -->
 
         </div>
         <!-- //container-->
