--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -93,7 +93,7 @@
                 하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.<br>a
                 세미클론(;)을 붙여 주지 않아도 상관없으나, 자바스크립트를 처음 학습하는 경우에는<br>하나의 실행문을 확인하고 넘어가는 차원에서 세미클론(;) 붙여서 코딩하는게 좋음
             </li>
-                <br><h3>var num = 5;</h3>
+                <br><p class="box">var num = 5;</p>
                 <h3>document.write (num);</h3><br>
             <li>대소문자를 구분합니다.</li>
                 <br><h3>var num = 5;</h3>
