--- a/html/markup.html
+++ b/html/markup.html
@@ -95,7 +95,8 @@
             text-align: center;
         }
         .article .box {
-            background-color: #dedede;
+            background-color: #ededed;
+            padding: 10px;
         }
 
         /* 미디어 쿼리 */
@@ -139,7 +140,7 @@
         </nav>
         <article class="article">
             <h2>마크업 기본 문법 규칙</h2>
-            <p>마크업을 할 때 기본적으로 알고 있어야 하는 문법 규칙들</p>
+            <p>마크업을 할 때 기본적으로 알고 있어야 하는 문법 규칙들</p> <br>
 
             <h3>1. 요소는 시작 태그와 종료 태그가 있어야 한다.</h3>
             <p class="box">
@@ -150,8 +151,8 @@
             
             <h3>2. 요소는 제대로 중첩되어야 한다.</h3>
             <p class="box">
-                &lt;p&gt;중첩된 요소가 있을 떄는 &lt;strong&gt;바르게&lt;/strong&gt; 표현해야 한다.&lt;p&gt; (0) <br>
-                &lt;p&gt;중첩된 요소가 있을 떄는 &lt;strong&gt;바르게&lt;/p&gt; 표현해야 한다.&lt;/strong&gt; (x)
+                &lt;p&gt;중첩된 요소가 있을 때는 &lt;strong&gt;바르게&lt;/strong&gt; 표현해야 한다.&lt;p&gt; (0) <br>
+                &lt;p&gt;중첩된 요소가 있을 때는 &lt;strong&gt;바르게&lt;/p&gt; 표현해야 한다.&lt;/strong&gt; (x)
             </p>
             <p>마지막에 정의한 태그를 가장 먼저 닫아야 한다는 뜻인데, 이러한 중첩 관계를 부모와 자식 관계라고도 한다. <br>여기에서는 &lt;p&gt;태그가 부모 요소가 되고,&lt;strong&gt; 태그가 자식 요소가 됩니다.</p> <br>
             
