--- a/html/basic.html
+++ b/html/basic.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML 기초</title>
-    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 
     <style>
         * {
             margin: 0;
             padding: 0;
-            font-family: 'GmarketSans';
+            font-family: 'Noto Sans KR', sans-serif;
         }
         #header {
             padding: 2vw;
