--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 기본 규칙</title>
 
-    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
     <style>
         /* 리셋 */
         * {
         margin: 0;
         padding: 0;
-        font-family: 'GmarketSans';
+        font-family: 'Noto Sans KR', sans-serif;
         }
         a {
             text-decoration: none;
@@ -35,7 +35,7 @@
         }
         #header nav ul li a {
             border: 1px solid #000;
-            padding: 0.7vw 1vw 0.3vw 1vw;
+            padding: 0.1vw 1vw 0.3vw 1vw;
             transition: all 0.3s;
             margin-bottom: 1vw;
             display: inline-block;
