--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 : 데이터 저장하기</title>
 
-    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/dracula.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
-    <style>
-        
+    <style>     
         * {
         margin: 0;
         padding: 0;
-        font-family: 'GmarketSans';
+        font-family: 'Noto Sans KR', sans-serif;
         }
         a {
             text-decoration: none;
@@ -36,7 +35,7 @@
         }
         #header nav ul li a {
             border: 1px solid #000;
-            padding: 0.7vw 1vw 0.3vw 1vw;
+            padding: 0.1vw 1vw 0.3vw 1vw;
             transition: all 0.3s;
             margin-bottom: 1vw;
             display: inline-block;
@@ -63,7 +62,7 @@
         #plist ul li a {
             background-color: #000;
             color: #fff;
-            padding: 5px 10px;
+            padding:3px 10px;
             font-size: 18px;
         }
 
