--- a/html/basic.html
+++ b/html/basic.html
@@ -134,8 +134,8 @@
                 <li><a href="basic.html">기본 문서</a></li>
                 <li><a href="markup.html">기본 규칙</a></li>
                 <li><a href="">w3c validator</a></li>
-                <li><a href="">시맨틱 마크업</a></li>
-                <li><a href="">블럭/인라인 요소</a></li>
+                <li><a href="semantic.html">시맨틱 마크업</a></li>
+                <li><a href="blockinline.html">블럭/인라인 요소</a></li>
             </ul>
         </nav>
         <article class="article">
@@ -186,12 +186,12 @@
                     &lt;meta name="viewport" <br>
                     content=""width=device-width, initial-scale=1.0.minimum-scale=1.0.maximum-scale=1.0.user <br>
                     scalable=no"&gt;
-                </p> <br>
+                </p>
                 <p>보통 뷰포트라고 하는데 모바일 해상도 (가로, 세로 보기)에 맞게 HTML 문서를 조절해 주는 속성들이라고 생각하면 된다.</p> <br>
                 <p>참고로 HTML5 이전에 많이 사용한 XHTML 1.0 Transitional 버전의 DOCTYPE은 다음과 같습니다.</p>
                 <p class="box">
                     &lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/Xhtml1<br>/DTD/xhtml-transitional.dtd"&gt;
-                </p> <br>
+                </p>
                 <p>XHTML 1.0버전의 경우 HTML5 보다 문법적으로 조금 더 엄격합니다.</p> <br>
 
                 <p class="box">
