--- a/html/markup.html
+++ b/html/markup.html
@@ -134,8 +134,8 @@
                 <li><a href="basic.html">기본 문서</a></li>
                 <li><a href="markup.html">기본 규칙</a></li>
                 <li><a href="#">w3c validator</a></li>
-                <li><a href="#">시맨틱 마크업</a></li>
-                <li><a href="#">블럭/인라인 요소</a></li>
+                <li><a href="semantic.html">시맨틱 마크업</a></li>
+                <li><a href="blockinline.html">블럭/인라인 요소</a></li>
             </ul>
         </nav>
         <article class="article">
