--- a/html/blockinline.html
+++ b/html/blockinline.html
@@ -139,7 +139,25 @@
             </ul>
         </nav>
         <article class="article">
-            
+            <p>태그를 배우기 전에 알아두어야 할 내용이 요소의 유형과 성질이다. 요소의 유형은 '블록 레벨 요소'와 <br>
+                '인라인 요소'로 나누어지며, 이 중 '블록 레벨 요소'에 대한 것을 먼저 알아보겠다.
+            </p> <br>
+            <h2>블록 레벨 요소(Block-level Elements)</h2>
+            <p>블록 레벨 요소는 마크업을 할 때 줄이 바뀌는 특성을 가지고 있는데, 다음 예제를 보면서 설명</p>
+            <p class="box">
+                &lt;!DOCTYPE html&gt;
+                &lt;html lang="ko"&gt;
+                &lt;head&gt;
+                &lt;meta charest="UFT-8"&gt;
+                &lt;title&gt;블록 레벨 요소&lt;/title&gt;
+                &lt;/head&gt;
+                &lt;body&gt;
+                &lt;h1&gt;블록 레벨 요소&lt;/h1&gt;
+                &lt;h2&gt;블록 레벨 요소 성질&lt;/h2&gt;
+                &lt;p&gt;줄 바꿈이 생깁니다.&lt;/p&gt;
+                &lt;/body&gt;
+                &lt;/html&gt;
+            </p>
         </article>
     </section>
 </body>
