--- a/html/semantic.html
+++ b/html/semantic.html
@@ -161,7 +161,26 @@
             <p>만약 '반응형 웹'이 HTML 문서에서 제목으로 사용된다고 가정할 경우 (예시 1-2)처럼 마크업을 하면, <br>
                 스크린 리더(음성 낭독 프로그램) 에서는 그거 '반응형 웹'이라고만 읽어주기 때문에 그 것이 제목인지를 알 수가 없습니다.
             </p> <br>
-            <p>이 부분을 제목을 의미하는 태그로 바꾸어 마크업해 보도록 하겠다.</p>
+            <p>이 부분을 제목을 의미하는 태그로 바꾸어 마크업해 보도록 하겠다.</p> <br>
+            <p class="box">
+                &lt;!DOCTYPE html&gt; <br>
+                &lt;html lang="ko"&gt;<br>
+                &lt;head&gt; <br>
+                &lt;meta charest="UFT-8"&gt; <br>
+                &lt;title&gt;시멘틱 마크업&lt;/table&gt; <br>
+                &lt;/head&gt; <br>
+                &lt;body&gt; <br>
+                반응형 웹 <br>
+                &lt;/body&gt; <br>
+                &lt;/html&gt;
+            </p>
+            <p>(예시 1-3)에서 &lt;h1&gt;은 문서의 첫 제목을 의미하는 태그이다. 이 부분을 '반응형웹' 헤딩 일이라고 읽어준다면
+                <br>"아! 이 부분이 제목이구나."를 알 수 있게 된다.
+            </p> <br>
+            <p class="box">
+                NOTE <br>
+                실제 마크업을 할 때는 작업자마다 콘텐츠의 의미를 해석하는 차이가 조금 있을 수도있지만 가끔은 <br>시멘틱하게 마크업을하려고 노력 하는 것이 중요합니다.
+            </p>
         </article>
     </section>
 </body>
