--- a/html/semantic.html
+++ b/html/semantic.html
@@ -150,11 +150,11 @@
                 &lt;!DOCTYPE html&gt; <br>
                 &lt;html lang="ko"&gt;<br>
                 &lt;head&gt; <br>
-                &lt;meta charest="UFT-8"&gt; <br>
-                &lt;title&gt;시멘틱 마크업&lt;/table&gt; <br>
+                &emsp;&emsp; &lt;meta charest="UFT-8"&gt; <br>
+                &emsp;&emsp; &lt;title&gt;시멘틱 마크업&lt;/table&gt; <br>
                 &lt;/head&gt; <br>
                 &lt;body&gt; <br>
-                반응형 웹 <br>
+                &emsp;&emsp; 반응형 웹 <br>
                 &lt;/body&gt; <br>
                 &lt;/html&gt;
             </p>
@@ -166,11 +166,11 @@
                 &lt;!DOCTYPE html&gt; <br>
                 &lt;html lang="ko"&gt;<br>
                 &lt;head&gt; <br>
-                &lt;meta charest="UFT-8"&gt; <br>
-                &lt;title&gt;시멘틱 마크업&lt;/table&gt; <br>
+                &emsp;&emsp; &lt;meta charest="UFT-8"&gt; <br>
+                &emsp;&emsp; &lt;title&gt;시멘틱 마크업&lt;/table&gt; <br>
                 &lt;/head&gt; <br>
                 &lt;body&gt; <br>
-                반응형 웹 <br>
+                &emsp;&emsp; 반응형 웹 <br>
                 &lt;/body&gt; <br>
                 &lt;/html&gt;
             </p>
