--- a/html/blockinline.html
+++ b/html/blockinline.html
@@ -187,6 +187,94 @@
             <br><br> <p>(예제 ex1-2)에서 마크업 했던 &lt;strong&gt;, &lt;span&gt; 요소들은 인라인 성질을 가지고 있어 행이 바뀌지 않고
                     한 줄로 출력 된 것을 확인 가능
                      </p>
+
+            <h2>블록 레벨 요소와 인라인 요소의 특성</h2>
+            <p>마크업을 할 때 블록 레벨 요소와 인라인 요소의 특성을 잘 알고 있어야만 문법적 오류를 방지 훌 수 있습니다.</p> <br>
+            <p>예를 들어 인라인 요소에는 일반적으로 블록 레벨 요소가 자식으로 올 수 없다</p> <br>
+            <p>예저를 통해 확인</p>
+            <p class="box">
+                &lt;!DOCTYPE html&gt; <br>
+                &lt;html lang="ko"&gt; <br>
+                &lt;head&gt; <br>
+                &emsp;&emsp; &lt;meta charest="UFT-8"&gt; <br>
+                &emsp;&emsp; &lt;title&gt;블록 레벨 요소와 인라인 요소&lt;/title&gt; <br>
+                &lt;/head&gt; <br>
+                &lt;body&gt; <br>
+                &emsp;&emsp; &lt;span&gt;&lt;h1&gt;블록 레벨 요소&lt;/h1&gt;&lt;/span&gt; <br>
+                &emsp;&emsp; &lt;span&gt;인라인 요소는 한 줄로 출력됩니다.&lt;/span&gt; <br>
+                &lt;/body&gt; <br>
+                &lt;/html&gt; <br>
+            </p> <br>
+            <p>&lt;span&gt;은 인라인 요소, &lt;h1&gt;은 블록 레벨 요소이다, 즉. 인라인 요소의 자식 요소 블록 레벨 요소를 마크업 했기에 문법 에러 발생</p>
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <td>요소 유형</td>
+                        <td>특징</td>
+                    </tr>
+                    <tr>
+                        <td>블록 레벨 요소</td>
+                        <td>1. 블록 레벨 요소는 줄 바꿈이 일어납니다. <br>
+                            2. 블록 레벨 요소는 텍스트 (문자)와 인라인 요소를 자식 요소로 포함 <br>
+                            3. 블록 레벨 요소중에는 블록 레벨 요소를 자식 요소로 포함 할 수 있는 요소와 포함 할 수 <br>없는 요소가 있다</td>
+                    </tr>
+                    <tr>
+                        <td>인라인 요소</td>
+                        <td>1. 인라인 요소는 줄 바꿈이 일어나지 않는다. <br>
+                            2. 인라인 요소는 텍스트 (문자)와 인라인 요소를 자식 요소로 포함 할 수 없다. <br>
+                            3. 인라인 요소는 블로 레벨 요소를 자식 요소로 포함 할 수 없다.
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>HTML5로 넘어오면서 블록 레벨 요소와 인라인 요소는 좀 더 복잡한 콘텐츠 카테고리 (콘텐츠 모델) <br>
+               로 대체 되었습니다. 콘텐츠의 종류와 태그들은 다음과 같습니다.</p> <br>
+            
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="center">콘텐츠 종류</td>
+                        <td class="center">내용</td>
+                        <td class="center">해당 요소</td>
+                    </tr>
+                    <tr>
+                        <td class="center">메타데이터 콘텐츠 <br>Metadata Content</td>
+                        <td><li>&lt;head&gt; 태그 안에 포함되는 요소들로 <br>콘텐츠의 표현, 동작 설정, 문서간 <br>관계를 설정, 정보 전달을 포함하는 <br>요소를 의미합니다.</li></td>
+                        <td>&lt;base&gt;, &lt;link&gt;, &lt;meta&gt;, &lt;noscript&gt;, <br>&lt;script&gt;, &lt;style&gt;, &lt;title&gt;, ...</td>
+                    </tr>
+                    <tr>
+                        <td class="center">플로우 콘텐츠 <br>Flow Content</td>
+                        <td><li>&lt;body&gt; 태그 안에 포함되는 대부분의 <br>요소들로 내용 흐름에 관한 요소를 <br>의미합니다.</td>
+                        <td>&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;, <br>&lt;address&gt; &lt;p&gt;, &lt;a&gt;, &lt;img&gt; &lt;ul&gt;, &lt;ol&gt;, <br>&lt;dl&gt; &lt;table&gt;, &lt;form&gt;, ...</li></td>
+                    </tr>
+                    <tr>
+                        <td class="center">섹션 콘첸츠 <br>Sectioning Cotent</td>
+                        <td><li>heading과 footer의 범위를 정의하는 <br>요소를 의미합니다.</li></td>
+                        <td>&lt;article&gt;, &lt;aside&gt;, &lt;anv&gt;, &lt;section&gt;</td>
+                    </tr>
+                    <tr>
+                        <td class="center">헤딩 콘텐츠 <br>Heading Content</td>
+                        <td><li>섹션의 헤더를 정의하는 요소를  <br>의미합니다.</li></td>
+                        <td>&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;</td>
+                    </tr>
+                    <tr>
+                        <td class="center">프레이징 콘텐츠 <br>Prashing Content</td>
+                        <td><li>텍스트를 마크업하는 요소를 <br>의미합니다.</li></td>
+                        <td>&lt;a&gt;, &lt;em&gt;, &lt;strong&gt;, &lt;sub&gt;, &lt;sup&gt;, &lt;label&gt;, ...</td>
+                    </tr>
+                    <tr>
+                        <td class="center">임베디드 콘텐츠 <br>Embedded Content</td>
+                        <td><li>HTML 문서에 다른 리소스를 삽입 <br>하는 요소를 의미합니다.</li></td>
+                        <td>&lt;img&gt;, &lt;audio&gt;, &lt;video&gt;, &lt;iframe&gt;, ...</td>
+                    </tr>
+                    <tr>
+                        <td class="center">인터랙티브 콘텐츠 <br>Interactive Content</td>
+                        <td><li>사용자의 상호작용 위한 요소를 <br>의미합니다.</li></td>
+                        <td>&lt;a&gt;, &lt;button&gt;, &lt;audio&gt;, &lt;video&gt;, &lt;select&gt;, ...</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>콘텐츠 모델에 관련된 내용들은 https://www.w.3.org.TR/html52/dom.html#content-models에서 더 많은 <br>정보를 볼 수 있습니다.</p>
         </article>
     </section>
 </body>
