--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -212,10 +212,10 @@
             <!-- 06 -->
             <div id="sample06" class="sample">
                 <h3>06. 배열 : 데이터 저장(여러개) : 표현 방법1</h3>
-                <p> 
+                <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    const arr = new Array();
+<pre><code class="language.js">    const arr = new Array();     //빈 배열 객체 생성
     arr[0] = 100;
     arr[1] = 200;
     arr[2] = "javascript";
@@ -425,23 +425,30 @@
                 <div class="script">
 <pre><code class="language.js">    const obj = {
     a: 100,
-    b: [200,300],
-    c: {x: 400, y:500},
+    b: [200, 300],
+    c: {x: 400, y: 500},
     d: "javascript"
     }
 
     document.write(obj.a);
     document.write(obj.b[0]);
     document.write(obj.b[1]);
-    document.write(obj.c,x);
-    document.write(obj.c,y);
-    document.write(obj.d);
+    document.write(obj.c.x);
+    document.write(obj.c.y);
+    document.write(obj.d)
 </code></pre>
                 </div>
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample15_result"></div>
+                        <div class="sample15_result">
+                            100 <br>
+                            200 <br>
+                            300 <br>
+                            400 <br>
+                            500 <br>
+                            javascript <br>
+                        </div>
                     </details>
                 </div>
             </div>
@@ -667,7 +674,7 @@
             document.querySelector(".sample14_result").innerHTML = x + "<br>" + y + "<br>" + z
         }
 
-        //15
+        //15 객체 : 객체 속에 배열
         {
             const obj = {
                 a: 100,
@@ -679,11 +686,9 @@
             // document.write(obj.a);
             // document.write(obj.b[0]);
             // document.write(obj.b[1]);
-            // document.write(obj.c,x);
-            // document.write(obj.c,y);
-            // document.write(obj.d);
-
-            document.querySelector(".sample15_result").innerHTML = x + "<br>" + y + "<br>" + z
+            // document.write(obj.c.x);
+            // document.write(obj.c.y);
+            // document.write(obj.d)
         }
     </script>
 </body>
