--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -29,8 +29,9 @@
                 <li><a href="#">이벤트 객체</a></li>
             </ul>
             <ul class="study">
-                <li><a href="#">기본 규칙</a></liㄴ>
-                <li><a href="#">기본 명령어</a></li>
+                <li><a href="basic.html">기본 규칙</a></li>
+                <li><a href="instruction.html">기본 명령어</a></li>
+                <li><a href="arithmetic.html">연산자</a></li>
             </ul>
         </nav>
     </header>
@@ -212,7 +213,7 @@
             <!-- 06 -->
             <div id="sample06" class="sample">
                 <h3>06. 배열 : 데이터 저장(여러개) : 표현 방법1</h3>
-                <p>
+                <p>배열은 여러 개의 데이터를 하나의 변수에 저장하기 위한 것이다.
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = new Array();     //빈 배열 객체 생성
@@ -302,7 +303,7 @@
             <!-- 10 -->
             <div id="sample10" class="sample">
                 <h3>10. 객체 : 데이터 저장(키와 값) : 표현 방법1</h3>
-                <p> 
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의 <br>쌍으로 이루어 있으며 이것을 속성이라 부른다.
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = new Object();
@@ -395,7 +396,7 @@
 
             <!-- 14 -->
             <div id="sample14" class="sample">
-                <h3>14. 객체 : 데이터 저장(키와 값) : 표현 방법4</h3>
+                <h3>14. 객체 : 배열 속에 객체</h3>
                 <p> 
                 </p>
                 <div class="script">
@@ -419,7 +420,7 @@
 
             <!-- 15 -->
             <div id="sample15" class="sample">
-                <h3>15. 객체 : 데이터 저장(키와 값) : 표현 방법4</h3>
+                <h3>15. 객체 : 객체 속에 배열</h3>
                 <p> 
                 </p>
                 <div class="script">
