--- a/javascript/instruction.html
+++ b/javascript/instruction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 데이터 제어하기</title>
+    <title>자바스크립트 기본 명령어</title>
     
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -35,29 +35,35 @@
         </nav>
     </header>
     <!-- //header -->
-
     <main id="main">
-        <div class="main_menu">
-            <ul>
-                <li><a href="#sample01">01. if문</a></li>
-                <li><a href="#sample02">02. if문 생략</a></li>
-                <li><a href="#sample03">03. 다중 if문</a></li>
-                <li><a href="#sample04">04. 중첩 if문</a></li>
-                <li><a href="#sample05">05. 삼항 연산자</a></li>
-                <li><a href="#sample06">06. swith문</a></li>
-                <li><a href="#sample07">07. while문</a></li>
-                <li><a href="#sample08">08. do while문</a></li>
-                <li><a href="#sample09">09. for문</a></li>
-                <li><a href="#sample10">10. 중첩 for문</a></li>
-                <li><a href="#sample11">11. break문</a></li>
-                <li><a href="#sample12">12. continue문</a></li>
-            </ul>
-        </div>
-        <div id="main_script"></div>
-        <div id="main_desc"></div>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td class="center">분류</td>
+                    <td class="center">명령어</td>
+                </tr>
+                <tr>
+                    <td class="center">입력</td>
+                    <td>prompt ('입력 제목','입력 내용')</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="3">출력</td>
+                    <td>document.write ('출력내용')</td>
+                </tr>
+                <tr>
+                    <td>alert ('출력내용')</td>
+                </tr>
+                <tr>
+                    <td>console.log ('출력 내용')</td>
+                </tr>
+                <tr>
+                    <td class="center">확인</td>
+                    <td>confirm ('확인 내용')</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <!-- //main -->
-
     <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
