--- a/css/font.html
+++ b/css/font.html
@@ -64,6 +64,9 @@
             padding: 2vw 0;
             line-height: 1.6;
         }
+        .article h1 {
+            font-size: normal;
+        }
         .article h2 {
             font-weight: normal;
             margin-bottom: 10px;
@@ -138,20 +141,20 @@
         </nav>
         <article class="article">
             <h2>font-size</h2>
-            <h3>css <br>문자 크기 속성 기본 크기는 16px</p> <br>
-            <p>px <br>해상도에 따라 달라지는 기본 단위</p>
+            <h1>css <br>문자 크기 속성 기본 크기는 16px</h1> <br>
+            <h1>px <br>해상도에 따라 달라지는 기본 단위</h1>
             <p class="box">font-size : 12px;</p> <br>
-            <p>% <br>부모 요소의 글자 크기를 100% 기준으로 계산한 %단위</p>
+            <h1>% <br>부모 요소의 글자 크기를 100% 기준으로 계산한 %단위</h1>
             <p class="box">font-size : 150%;</p>
             <p>기본 단위에 150%가 된다</p> <br>
-            <p>em <br>부모 요소의 글자 100%를 기준으로 계산한 1/100단위</p>
+            <h1>em <br>부모 요소의 글자 100%를 기준으로 계산한 1/100단위</h1>
             <p class="box">font-size : 1.5em;</p> <br>
-            <p>rem <br>rem은 em과 비슷하지만 부모 요소가 아닌 "최상위 요소"로써의 크기로 100%기준으로 계산</p>
+            <h1>rem <br>rem은 em과 비슷하지만 부모 요소가 아닌 "최상위 요소"로써의 크기로 100%기준으로 계산</h1>
             <p class="box">font-size : 1.5rem;</p> <br>
-            <p>vw, vh <br>
+            <h1>vw, vh <br>
                 vw는 뷰포트 너비 값의 1/100 단위 <br>
                 vh는 뷰포트 높이 값의 1/100 단위
-            </p>
+            </h1>
             <p class="box">font-size : 10vw;</p>
         </article>
     </section>
