--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -11,27 +11,26 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript</h1>
+        <h1><a href="index.html">javascript</a></h1>
         <nav class="header_nav">
             <ul>
-                <li><a href="javascript01.html">데이터 저장하기</a></li>
+                <li class="active"><a href="javascript01.html">데이터 저장하기</a></li>
                 <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
                 <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
             <ul>
-                <li><a href="#">문자열 객체</a></li>
-                <li><a href="#">배열 객체</a></li>
-                <li><a href="#">수학 객체</a></li>
-                <li><a href="#">숫자 객체</a></li>
-                <li><a href="#">브라우저 객체</a></li>
-                <li><a href="#">요소 객체</a></li>
-                <li><a href="#">이벤트 객체</a></li>
+                <li><a href="javascript05.html">문자열 객체</a></li>
+                <li><a href="javascript06.html">배열 객체</a></li>
+                <li><a href="javascript07.html">수학 객체</a></li>
+                <li><a href="javascript08.html">숫자 객체</a></li>
+                <li><a href="javascript09.html">브라우저 객체</a></li>
+                <li><a href="javascript10.html">요소 객체</a></li>
+                <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="study">
-                <li><a href="basic.html">기본 규칙</a></li>
-                <li><a href="instruction.html">기본 명령어</a></li>
-                <li><a href="arithmetic.html">연산자</a></li>
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
             </ul>
         </nav>
     </header>
@@ -258,7 +257,7 @@
             <!-- 08 -->
             <div id="sample08" class="sample">
                 <h3>08. 배열 : 데이터 저장(여러개) : 표현 방법3</h3>
-                <p> 
+                <p>약식으로 작업
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = [];
@@ -282,7 +281,7 @@
             <!-- 09 -->
             <div id="sample09" class="sample">
                 <h3>09. 배열 : 데이터 저장(여러개) : 표현 방법4</h3>
-                <p> 
+                <p>제일 많이 쓰는 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = [100, 200, "javascript"]
@@ -351,7 +350,7 @@
             <!-- 12 -->
             <div id="sample12" class="sample">
                 <h3>12. 객체 : 데이터 저장(키와 값) : 표현 방법3</h3>
-                <p> 
+                <p>약식으로 작업
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {}
@@ -376,7 +375,7 @@
             <!-- 13 -->
             <div id="sample13" class="sample">
                 <h3>13. 객체 : 데이터 저장(키와 값) : 표현 방법4</h3>
-                <p> 
+                <p>
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {a:100, b:200, c:"javascript"}
@@ -449,6 +448,87 @@
                             400 <br>
                             500 <br>
                             javascript <br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 16 -->
+            <div id="sample16" class="sample">
+                <h3>16. 객체 : 객체 속에 변수</h3>
+                <p>리액트에서 가장 많이 쓴다
+                </p>
+                <div class="script">
+<pre><code class="language.js">    const a = 100;
+    const b = 200;
+    const c = "javascript";
+
+    const obj = {a, b, c}
+    
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.c);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample16_result">
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 17 -->
+            <div id="sample17" class="sample">
+                <h3>17. 객체 : 객체 속에 함수</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language.js">    const obj = {
+    a : 100,
+    b : [200, 300],
+    c : {x:400, y:500},
+    d: "javascript",
+    e: function(){
+        document.write("자바스크립트가 실행되었습니다.");
+    },
+    f : function(){
+        document.write(obj.d + "가 실행되었습니다.");   //다른 값을 넣어 불러올 수 있음
+    },
+    g : function(){
+        document.write(this.d + "가 실행되었습니다.");
+    }
+}
+
+document.write(obj.a)
+document.write(obj.b[0])
+document.write(obj.b[1])
+document.write(obj.b)
+document.write(obj.c.x)
+document.write(obj.c.y)
+document.write(obj.c)
+document.write(obj.d)
+obj.e() //제어문 삭제
+obj.f()
+obj.g()
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample17_result">
+                            100 <br>
+                            200 <br>
+                            300 <br>
+                            200300 <br>
+                            400 <br>
+                            500 <br>
+                            400500 <br>
+                            javascript <br>
+                            "자바스크립트가 실행되었습니다." <br>
+                            javascript"가 실행되었습니다." <br>
+                            javascript"가 실행되었습니다." <br>
                         </div>
                     </details>
                 </div>
@@ -690,6 +770,52 @@
             // document.write(obj.c.x);
             // document.write(obj.c.y);
             // document.write(obj.d)
+        }
+
+        //16 객체 : 객체 속에 변수 리액트에서 가장 많이 씀
+        {
+            const a = 100;
+            const b = 200;
+            const c = "javascript";
+
+            const obj = {a, b, c}
+            
+            // document.write(obj.a);
+            // document.write(obj.b);
+            // document.write(obj.c);
+
+            document.querySelector(".sample16_result").innerHTML = x + "<br>" + y + "<br>" + z
+        }
+
+        //17 객체 : 객체 속에 함수
+        {
+            const obj = {
+                a : 100,
+                b : [200, 300],
+                c : {x:400, y:500},
+                d: "javascript",
+                e: function(){
+                    document.write("자바스크립트가 실행되었습니다.");
+                },
+                f : function(){
+                    document.write(obj.d + "가 실행되었습니다.");   //다른 값을 넣어 불러올 수 있음
+                },
+                g : function(){
+                    document.write(this.d + "가 실행되었습니다.");
+                }
+            }
+
+            // document.write(obj.a)
+            // document.write(obj.b[0])
+            // document.write(obj.b[1])
+            // document.write(obj.b)
+            // document.write(obj.c.x)
+            // document.write(obj.c.y)
+            // document.write(obj.c)
+            // document.write(obj.d)
+            // obj.e() //제어문 삭제
+            // obj.f()
+            // obj.g()
         }
     </script>
 </body>
