--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 기본 규칙</title>
+    <title>자바스크립트 : 연산자</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <!-- //header -->
+
     <main id="main">
         <div class="document">
         <h2 class="t_tit">연산자</h2>
@@ -49,6 +50,7 @@
                 산술 연산자는 <i>사칙연산</i>을 다루는 기본적이면서도 가장 많이 사용되는 연산자다.
                 산술 연산자는 모두 두 개의 피연산자를 가지는 이항 연산자이며, 피연산자들의 결합 방향은 왼쪽에서 오른쪽으로 이루어진다.
             </p>
+
             <table class="t_table">
                 <thead>
                     <tr>
@@ -90,6 +92,7 @@
                     </tr>
                 </tbody>
             </table> <br>
+
             <h3 class="t_ti2">'+' 연산자</h3>
             <p class="t_desc">좌변과 우변에 숫자가 아닌 문자나 변수 등이 오면 더하기가 아닌 <i>연결 연산</i>을 한다.</p>
             <h3 class="t_ti2">'%' 연산자</h3>
@@ -104,6 +107,7 @@
                 대입 연산자는 변수에 값을 대입할 때 사용하는 이항 연산자이며, 피연산자들의 결합 방향은 오른쪽에서 왼쪽이다.
                 또한, 산술 연산자와 결합한 다양한 복합 대입 연산자가 존재한다.
             </p>
+
             <table class="t_table">
                 <thead>
                     <tr>
@@ -138,6 +142,7 @@
                     </tr>
                 </tbody>
             </table> <br>
+
             <h3 class="t_ti2">'+=' 연산자</h3>
             <p class="t_desc">'+='연산자는 '+'연산자처럼 좌변과 우변에 숫자가 아닌 <i>문자</i>나 <i>변수</i> 등이 오면 기존 데이터에 새로운 데이터를 연결하여 누적한다.</p>
 
@@ -148,6 +153,7 @@
                 비교 연산자는 피연산자 사이의 상대적인 크기를 판단하여, <i>참(true)</i>과 <i>거짓(false)</i>을 반환한다.
                 비교 연산자는 모두 두 개의 피연산자를 가지는 이항 연산자이며, 피연산자들의 결합 방향은 왼쪽에서 오른쪽이다.
             </p>
+
             <table class="t_table">
                 <thead>
                     <tr>
@@ -220,6 +226,7 @@
                 and, or, xor 연산자는 두 개의 피연산자를 가지는 이항 연산자이며, 피연산자들의 결합 방향은 왼쪽에서 오른쪽이다.
                 ! 연산자는 피연산자가 단 하나뿐인 <i>단항 연산자</i>이며, 피연산자의 결합 방향은 오른쪽에서 왼쪽이다.
             </p>
+
             <table class="t_table">
                 <thead>
                     <tr>
@@ -246,16 +253,19 @@
                     </tr>
                 </tbody>
             </table> <br>
+
             <h3 class="t_ti2">논리 연산자를 이용한 부등식 표현</h3>
             <p class="t_desc">'x의 값이 20보다 크고 30보다 작다.'의 일반적인 부등식 표현은 '20&lt;x&lt;30'이지만 자바스크립트에서는 'AND 연산자'를 사용하여 표현한다.</p>
             
         </div>
     </main>
     <!-- //main -->
+
     <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
+    
     <script src="../assets/js/highlight.min.js"></script>
     <script>
 
