--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -39,7 +39,7 @@
     <main id="main">
         <div class="document">
             <h2 class="t_tit">for문</h2>
-            <p class="t_desc">for문은 특정 구문을 여러번 반보가고 싶을 때 사용하는 반복문입니다.</p>
+            <p class="t_desc">for문은 특정 구문을 여러번 반복하고 싶을 때 사용하는 반복문입니다.</p>
             <p class="t_box">
                 for (초기 값 ; 조건식; 증감값) {<br>
                     &ensp;&ensp;실행문<br>
@@ -52,7 +52,7 @@
             <div class="t_code">
 <pre><code>    //0부터 99까지 출력하기
     for( let i=0; i&lt;100; i++){
-        document.write(i)
+        document.write(i);
     }
 </code></pre>
             </div>
@@ -61,7 +61,7 @@
             <div class="t_code">
 <pre><code>    //1부터 100까지 출력
     for( let i=1; i&lt;=100; i++){
-        document.write(i,);
+        document.write(i);
     }
 </code></pre>
             </div>
@@ -71,9 +71,55 @@
             <div class="t_code">
 <pre><code>    //1부터 100까지 출력(짝수) i = i + 2
     for( let i=2; i&lt;=100; i+=2){
-        document.write(i, "<br>");
+        document.write(i);
     }
 </code></pre>
+            </div>
+
+            <h3 class="t_tit2">for문을 이용해서 테이블 출력하기(100칸)</h3>
+            <p class="t_dec">중첩 for문을 이용해서 테이블을 만들 수 있습니다.</p>
+            <div class="t_code">
+<pre><code code="language.js">    let table = "&lt;table&gt;";
+
+        for(let i=0; i&lt;10; i++){
+            table += "&lt;tr&gt;";
+
+            for(let j=0; j&lt;10; j++){
+               table += "&lt;td&gt;1&lt;/td&gt;";
+            }
+
+            table += "&lt;/tr&gt;";
+        }
+
+        table += "&lt;/table&gt;";
+
+    document.write(table);
+</code></pre>
+            </div>
+            <div class="t_result">
+                <details>
+                    <style>
+                        .testTable tr td{
+                            border : 1px solid #000;
+                        }
+                    </style>
+                    <summary>확인하기</summary>
+                    <div class="result01"></div>
+                </details>
+                <script>
+                    let table = "<table class='testTable'>";
+            
+                        for(let i=0; i<10; i++){
+                            table += "<tr>"
+            
+                            for(let j=0; j<10; j++){
+                                table += "<td>1</td>"
+                            }
+                            table += "</tr>"
+                        }
+                        table += "</table>";
+                        document.querySelector(".result01").innerHTML = table;
+                </script>
             </div>
         </div>
     </main>
