--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -94,11 +94,11 @@
                 </tbody>
             </table> <br>
 
-            <h3 class="t_ti2">'+' 연산자</h3>
+            <p class="t_ti3">'+' 연산자</p>
             <p class="t_desc">좌변과 우변에 숫자가 아닌 문자나 변수 등이 오면 더하기가 아닌 <i>연결 연산</i>을 한다.</p>
-            <h3 class="t_ti2">'%' 연산자</h3>
+            <p class="t_ti3">'%' 연산자</p>
             <p class="t_desc">'반복적인 숫자 구간의 패턴', 조건문을 이용한 '짝과 홀수 판단, 배수 판다' 등의 식을 만드는데 사용한다.</p>
-            <h3 class="t_ti2">'++,--' 연산자</h3>
+            <p class="t_ti3">'++,--' 연산자</p>
             <p class="t_desc">'변수의 값을 1씩 증가 시키거나 감소시키는데 사용하는 연산자이며, '+'와 '+'사이, '-'와 '-'사이에 <i>공백</i>이 있으면 안된다.</p>
 
             <hr>
@@ -144,7 +144,7 @@
                 </tbody>
             </table> <br>
 
-            <h3 class="t_ti2">'+=' 연산자</h3>
+            <p class="t_ti3">'+=' 연산자</p>
             <p class="t_desc">'+='연산자는 '+'연산자처럼 좌변과 우변에 숫자가 아닌 <i>문자</i>나 <i>변수</i> 등이 오면 기존 데이터에 새로운 데이터를 연결하여 누적한다.</p>
 
             <hr>
@@ -255,7 +255,7 @@
                 </tbody>
             </table> <br>
 
-            <h3 class="t_ti2">논리 연산자를 이용한 부등식 표현</h3>
+            <p class="t_ti3">논리 연산자를 이용한 부등식 표현</p>
             <p class="t_desc">'x의 값이 20보다 크고 30보다 작다.'의 일반적인 부등식 표현은 '20&lt;x&lt;30'이지만 자바스크립트에서는 'AND 연산자'를 사용하여 표현한다.</p>
             
         </div>
