--- a/css/index.html
+++ b/css/index.html
@@ -49,7 +49,7 @@
             padding: 1vw;
         }
         #main nav ul li a:hover {
-            background-color: #fff;
+            background-color: #0a183e;
             color: #fff;
         }
     </style>
