--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
             padding: 1vw;
         }
         #main nav ul li a:hover {
-            background-color: #fff;
+            background-color: #13443b;
             color: #fff;
         }
     </style>
