--- a/html/markup.html
+++ b/html/markup.html
@@ -131,11 +131,12 @@
     <section id="contents">
         <nav class="menu">
             <ul>
-                <li><a href="basic.html">기본 문서</a></li>
-                <li><a href="markup.html">기본 규칙</a></li>
-                <li><a href="#">w3c validator</a></li>
-                <li><a href="semantic.html">시맨틱 마크업</a></li>
-                <li><a href="blockinline.html">블럭/인라인 요소</a></li>
+                <li class="active"><a href="alphabet.html">알파벳</a></li>
+                <li><a href="basic.html">기초 문법</a></li>
+                <li><a href="block.html">블록 구조/인라인 구조</a></li>
+                <li><a href="web">웹표준/웹접근성/웹호환성</a></li>
+                <li><a href="sementic.html">시멘틱 태그</a></li>
+                <li><a href="seo">검색엔진시스템(SEO)</a></li>
             </ul>
         </nav>
         <article class="article">
