--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="index.html">web's</a>
+        <a class="brand" href="index.html">KDB</a>
         <div class="nav-collapse collapse pull-right">
           <ul class="nav">
             <li><a href="https://ipkg7210.tistory.com/">Blog</a></li>
@@ -235,7 +235,7 @@
                   <span class="overlay-text-thumb1-donut">LAYOUT</span>
                   <span class="overlay-text-thumb2-donut">LAYOUT</span>
                 </div>
-                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>LAYOUT</h5>
                   <p>LAYOUT</p>
