--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -173,14 +173,14 @@
                         <summary>결과보기</summary>
                         <div class="sample04_result">
                             함수 안<br>
-                            100 <br>
-                            200 <br>
-                            javascript <br>
+                            100<br>
+                            300<br>
+                            javascript<br><br>
 
-                            함수 밖 <br>
-                            100 <br>
-                            300 <br>
-                            undifined <br>
+                            함수 밖<br>
+                            100<br>
+                            300<br>
+                            undifined<br>
                         </div>
                     </details>
                 </div>
@@ -459,12 +459,12 @@
                     <details>
                         <summary>결과보기</summary>
                         <div class="sample15_result">
-                            100 <br>
-                            200 <br>
-                            300 <br>
-                            400 <br>
-                            500 <br>
-                            javascript <br>
+                            100<br>
+                            200<br>
+                            300<br>
+                            400<br>
+                            500<br>
+                            javascript<br>
                         </div>
                     </details>
                 </div>
@@ -537,17 +537,17 @@
                     <details>
                         <summary>결과보기</summary>
                         <div class="sample17_result">
-                            100 <br>
-                            200 <br>
-                            300 <br>
-                            200300 <br>
-                            400 <br>
-                            500 <br>
-                            400500 <br>
-                            javascript <br>
-                            "자바스크립트가 실행되었습니다." <br>
-                            javascript"가 실행되었습니다." <br>
-                            javascript"가 실행되었습니다." <br>
+                            100<br>
+                            200<br>
+                            300<br>
+                            200300<br>
+                            400<br>
+                            500<br>
+                            400500<br>
+                            javascript<br>
+                            "자바스크립트가 실행되었습니다."<br>
+                            javascript"가 실행되었습니다."<br>
+                            javascript"가 실행되었습니다."<br>
                         </div>
                     </details>
                 </div>
@@ -636,8 +636,6 @@
             // document.write(x,"<br>");
             // document.write(y,"<br>");
             // document.write(z,"<br>");
-
-            document.querySelector(".sample04_result").innerHTML = x + "<br>" + y + "<br>" + z
         }
 
         //05
