--- a/123.html
+++ b/123.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃</title>
+    <!--
+        float 레이아웃 (반응형)
+        flex 레이아웃 (반응형)
+        grid 레이아웃 (반응형)
+     -->
     <style>
         * {
             margin: 0;
@@ -14,47 +19,48 @@
         }
         #wrap {
             width: 1200px;
-            margin: 0 auto;
+            margin: 0 auto; /* 블록구조를 가운데 정렬 */
+            display: grid;
+            grid-template-areas:
+                "header header"
+                "nav nav"
+                "aside section"
+                "footer footer"
+            ;
+            grid-template-columns: 30% 70% ;
+            grid-template-rows: 100px 100px 780px 100px;
         }
         #header {
-            width: 100%;
-            height: 100px;
+            grid-area: header;
             background-color: #FFE0B2;
         }
         #nav {
-            width: 100%;
-            height: 100px;
+            grid-area: nav;
             background-color: #FFCC80;
         }
         #aside {
-            width: 30%;
-            height: 780px;
+            grid-area: aside;
             background-color: #FFB74D;
-            float: left;
         }
         #section {
-            width: 70%;
-            height: 780px;
+            grid-area: section;
             background-color: #FFA726;
-            float: left;
         }
         #footer {
-            width: 100%;
-            height: 100px;
+            grid-area: footer;
             background-color: #FF9800;
-            clear: both;
         }
-        @media (max-width:1220px) {
+        @media (max-width: 1220px){
             #wrap {
                 width: 96%;
             }
         }
-        @media (max-width:768px) {
+        @media (max-width: 768px){
             #wrap {
                 width: 100%;
             }
         }
-        @media (max-width:480px) {
+        @media (max-width: 480px){
             #aside {
                 width: 100%;
                 height: 300px;
@@ -63,16 +69,16 @@
                 width: 100%;
                 height: 480px;
             }
-        }       
-</style>
+        }
+    </style>
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section"></div>
-        <div id="footer"></div>
+        <header id="header"></header>
+        <nav id="nav"></nav>
+        <aside id="aside"></aside>
+        <section id="section"></section>
+        <footer id="footer"></footer>
     </div>
 </body>
 </html>
