--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -68,7 +68,7 @@
         <!-- 01 -->
         <div id="sample01" class="sample">
             <h3>01. 변수 : 데이터 불러오기</h3>
-            <p></p>
+            <p>데이터 저장 가능하며. 불러오기 가능</p>
             <div class="script">
 <pre><code class="language-js">    let x = 100,
          y = 200,
@@ -92,7 +92,7 @@
         <!-- 02 -->
         <div id="sample02" class="sample">
             <h3>02. 상수 : 데이터 불러오기</h3>
-            <p></p>
+            <p>상수 데이터를 불러올 수 있다.</p>
             <div class="script">
 <pre><code class="language-js">   const x = 100,
             y = 200,
@@ -116,7 +116,7 @@
         <!-- 03 -->
         <div id="sample03" class="sample">
             <h3>03. 배열 : 데이터 불러오기</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 첫번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, "javascript"];
 
@@ -138,7 +138,7 @@
         <!-- 04 -->
         <div id="sample04" class="sample">
             <h3>04. 배열 : 데이터 불러오기 : 2차 배열</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 두번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, ["javascript", "jquery"]];
 
@@ -165,7 +165,7 @@
         <!-- 05 -->
         <div id="sample05" class="sample">
             <h3>05. 배열 : 데이터 불러오기 : 갯수 구하기</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 세번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, "javascript"];
 
@@ -186,7 +186,7 @@
         <!-- 06 -->
         <div id="sample06" class="sample">
             <h3>06. 배열 : 데이터 불러오기 : for()문</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 네번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, 300, 400, 500];
 
@@ -219,7 +219,7 @@
         <!-- 07 -->
         <div id="sample07" class="sample">
             <h3>07. 배열 : 데이터 불러오기 : forEach()</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 다섯번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const num = [100, 200, 300, 400, 500];
 
@@ -250,8 +250,8 @@
 
         <!-- 08 -->
         <div id="sample08" class="sample">
-            <h3>08. 배열에 데이터 불러오기 : for of (react에서 많이 씀)</h3>
-            <p></p>
+            <h3>08. 배열에 데이터 불러오기 : for of</h3>
+            <p>배열 데이터 불러오기 여섯번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, 300, 400, 500];
 
@@ -278,7 +278,7 @@
         <!-- 09 -->
         <div id="sample09" class="sample">
             <h3>09. 배열에 데이터 불러오기 : for in</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 일곱번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, 300, 400, 500];
 
@@ -306,7 +306,7 @@
         <!-- 10 -->
         <div id="sample10" class="sample">
             <h3>10. 배열 데이터 불러오기 : map()</h3>
-            <p></p>
+            <p>배열 데이터 불러오기 여덟번째 방법</p>
             <div class="script">
 <pre><code class="language-js">    const arr = [100, 200, 300, 400, 500];
 
