--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -219,7 +219,7 @@
             <!-- 06 -->
             <div id="sample06" class="sample">
                 <h3>06. 배열 : 데이터 저장(여러개) : 표현 방법1</h3>
-                <p>배열은 여러 개의 데이터를 하나의 변수에 저장하기 위한 것이다.
+                <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 첫번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = new Array();     //빈 배열 객체 생성
@@ -244,7 +244,7 @@
             <!-- 07 -->
             <div id="sample07" class="sample">
                 <h3>07. 배열 : 데이터 저장(여러개) : 표현 방법2</h3>
-                <p> 
+                <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 두번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = new Array (100, 200, "javascript");
@@ -266,7 +266,7 @@
             <!-- 08 -->
             <div id="sample08" class="sample">
                 <h3>08. 배열 : 데이터 저장(여러개) : 표현 방법3</h3>
-                <p>약식으로 작업
+                <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 세번째 방법 약식으로 작업
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = [];
@@ -291,7 +291,7 @@
             <!-- 09 -->
             <div id="sample09" class="sample">
                 <h3>09. 배열 : 데이터 저장(여러개) : 표현 방법4</h3>
-                <p>제일 많이 쓰는 방법
+                <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 네번째 방법 가장 많이 쓰는 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const arr = [100, 200, "javascript"]
@@ -313,7 +313,7 @@
             <!-- 10 -->
             <div id="sample10" class="sample">
                 <h3>10. 객체 : 데이터 저장(키와 값) : 표현 방법1</h3>
-                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의 <br>쌍으로 이루어 있으며 이것을 속성이라 부른다.
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 첫번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = new Object();
@@ -338,7 +338,7 @@
             <!-- 11 -->
             <div id="sample11" class="sample">
                 <h3>11. 객체 : 데이터 저장(키와 값) : 표현 방법2</h3>
-                <p> 
+                <p> 객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 두번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = new Object();
@@ -363,7 +363,7 @@
             <!-- 12 -->
             <div id="sample12" class="sample">
                 <h3>12. 객체 : 데이터 저장(키와 값) : 표현 방법3</h3>
-                <p>약식으로 작업
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 세번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {}
@@ -389,7 +389,7 @@
             <!-- 13 -->
             <div id="sample13" class="sample">
                 <h3>13. 객체 : 데이터 저장(키와 값) : 표현 방법4</h3>
-                <p>
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 네번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {a:100, b:200, c:"javascript"}
@@ -411,7 +411,7 @@
             <!-- 14 -->
             <div id="sample14" class="sample">
                 <h3>14. 객체 : 배열 속에 객체</h3>
-                <p> 
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 다섯번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = [
@@ -436,7 +436,7 @@
             <!-- 15 -->
             <div id="sample15" class="sample">
                 <h3>15. 객체 : 객체 속에 배열</h3>
-                <p> 
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 여섯번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {
@@ -473,7 +473,7 @@
             <!-- 16 -->
             <div id="sample16" class="sample">
                 <h3>16. 객체 : 객체 속에 변수</h3>
-                <p>
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 일곱번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const a = 100;
@@ -500,7 +500,7 @@
             <!-- 17 -->
             <div id="sample17" class="sample">
                 <h3>17. 객체 : 객체 속에 함수</h3>
-                <p>
+                <p>객체는 데이터를 필요한 대로 만들어 사용 가능하며, 객체의 데이터는 '이름 : 값' 의<br>쌍으로 이루어 있으며 이것을 속성이라 부른다.<br>키와 값으로 구성된 데이터 값 저장. 여덟번째 방법
                 </p>
                 <div class="script">
 <pre><code class="language.js">    const obj = {
