--- a/javascript/study/function.html
+++ b/javascript/study/function.html
@@ -41,24 +41,21 @@
 
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">1</h2>
-            <p class="t_box">
-                1
+            <h2 class="t_tit">함수</h2>
+            <p class="t_desc">
+                함수는 프로그램에서 반복적으로 사용되는 기능을 만들어 내기 위한 코드들의 집합
             </p>
 
             <hr>
 
-            <h3 class="t_tit2">1</h3>
-            <p class="t_desc">
-                1
-            </p>
+            <h3 class="t_tit2">선언적 함수</h3>
             <div class="t_box">
-                <i>var num = 10;</i><br>
-                <i>var num2 = 10.5;</i><br>
-                <i>var num3 = 1e+2;</i><br>
-                console.log(num1); // <i>10</i><br>
-                console.log(num2); // <i>10.5</i><br>
-                console.log(num2); // <i>100</i>, 1e+2는 1*10의 2승을 의미
+                function 함수() {<br>
+                    실행문;<br>
+                }
+            </div>
+            <div class="t_box">
+                
             </div><br>
 
             <h3 class="t_tit2">1</h3>
