--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -74,7 +74,9 @@
                 <li><a href="sample29">29. 클래스 상속</a></li>
             </ul>
         </div>
-        <div id="main_script"></div>
+        <div id="main_script">
+            
+        </div>
         <div id="main_desc"></div>
     </main>
     <!-- //main -->
