--- a/html/blockinline.html
+++ b/html/blockinline.html
@@ -131,9 +131,9 @@
     <section id="contents">
         <nav class="menu">
             <ul>
-                <li class="active"><a href="alphabet.html">알파벳</a></li>
+                <li><a href="alphabet.html">알파벳</a></li>
                 <li><a href="basic.html">기초 문법</a></li>
-                <li><a href="block.html">블록 구조/인라인 구조</a></li>
+                <li class="active"><a href="blockinline.html">블록 구조/인라인 구조</a></li>
                 <li><a href="web">웹표준/웹접근성/웹호환성</a></li>
                 <li><a href="sementic.html">시멘틱 태그</a></li>
                 <li><a href="seo">검색엔진시스템(SEO)</a></li>
