--- a/html/layout01.html
+++ b/html/layout01.html
@@ -7,6 +7,7 @@
     <title>HTML 레퍼런스 북</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/androidstudio.css">
 
     <!-- 구글 아이콘 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -43,13 +44,185 @@
             <div class="document">
                 <h2 class="t_tit">레이아웃1</h2>
                 <p class="t_desc">
-                    이번 레이아웃은 전체 영역이 들어간 구조입니다.
-                    실제 사이트에서 이런 구조를 많이 사용하며, 컨테이너를 만들어서
-                    가운데 영역을 설정합니다.
+                    기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
                 </div>
+
+                <h3 class="t_tit">float을 이용한 레이아웃</h3>
+                <p class="t_desc2">
+                    float 요소를 이용해 세로로만 나열이 아닌 가로로도 배치하여 레이아웃을 구성
+                </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #fff3e0;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    #header {
+        width: 1200px;
+        height: 100px;
+        background-color: #ffe0b2;
+    }
+    #nav {
+        width: 1200px;
+        height: 100px;
+        background-color: #ffcc80;
+    }
+    #aside {
+        width: 400px;
+        height: 780px;
+        background-color: #ffb74d;
+        float: left;
+    }
+    #section {
+        width: 800px;
+        height: 780px;
+        background-color: #ffa726;
+        float: left;
+    }
+    #footer {
+        width: 1200px;
+        height: 100px;
+        background-color: #ff9800;
+        clear: both;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #fff3e0;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #header {
+        width: 100%;
+        height: 100px;
+        background-color: #ffe0b2;
+    }
+    #nav {
+        width: 100%;
+        height: 100px;
+        background-color: #ffcc80;
+    }
+    #aside {
+        width: 30%;
+        height: 780px;
+        background-color: #ffb74d;
+        float: left;
+    }
+    #section {
+        width: 70%;
+        height: 780px;
+        background-color: #ffa726;
+        float: left;
+    }
+    #footer {
+        width: 100%;
+        height: 100px;
+        background-color: #ff9800;
+        clear: both;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">grid를 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                grid 시스템을 이용한 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #fff3e0;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-areas: 
+            "header header"
+            "nav nav"
+            "aside section"
+            "footer footer"
+        ;
+        grid-template-columns: 400px 800px;
+        grid-template-rows: 100px 100px 780px 100px;
+    }
+    #header {
+        background-color: #ffe0b2;
+        grid-area: header;
+    }
+    #nav {
+        background-color: #ffcc80;
+        grid-area: nav;
+    }
+    #aside {
+        background-color: #ffb74d;
+        float: left;
+        grid-area: aside;
+    }
+    #section {
+        background-color: #ffa726;
+        float: left;
+        grid-area: section;
+        
+    }
+    #footer {
+        background-color: #ff9800;
+        clear: both;
+        grid-area: footer;
+    }
+</code></pre>
+            </div>
+            <summary>결과</summary>
+            <div class="iframe">
+                <iframe height="600" style="width: 100%;" scrolling="no" title="layout grid1" src="https://codepen.io/kdb6/embed/ZExJKjN?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    See the Pen <a href="https://codepen.io/kdb6/pen/ZExJKjN">
+                    layout grid1</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+                    on <a href="https://codepen.io">CodePen</a>.
+                </iframe>
+            </div>
+
+            </div>
+        </div>
+    </main>
+    <!-- //main -->
+
+    <footer id="footer">
+        <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
+    </footer>
+    <!-- //footer -->
+    <script src="assets/css/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
             </div>
         </div>
     </main>
