--- a/html/layout03.html
+++ b/html/layout03.html
@@ -7,6 +7,7 @@
     <title>HTML 레퍼런스 북</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/androidstudio.css">
 
     <!-- 구글 아이콘 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -43,13 +44,208 @@
             <div class="document">
                 <h2 class="t_tit">레이아웃3</h2>
                 <p class="t_desc">
-                    이번 레이아웃은 전체 영역이 들어간 구조입니다.
-                    실제 사이트에서 이런 구조를 많이 사용하며, 컨테이너를 만들어서
-                    가운데 영역을 설정합니다.
+                    기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
+                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
                 </div>
+
+                <h3 class="t_tit">float을 이용한 레이아웃</h3>
+                <p class="t_desc2">
+                    float 요소를 이용해 세로로만 나열이 아닌 가로로도 배치하여 레이아웃을 구성
+                </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #e1f5fe;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    #header {
+        width: 1200px;
+        height: 100px;
+        background-color: #b3e5fc;
+    }
+    #nav {
+        width: 1200px;
+        height: 100px;
+        background-color: #81d4fa;
+    }
+    #main {
+        width: 1200px;
+    }
+    #aside {
+        width: 300px;
+        height: 780px;
+        background-color: #4fc3f7;
+        float: left;
+    }
+    #article1 {
+        width: 900px;
+        height: 260px;
+        background-color: #29b6f6;
+        float: left;
+    }
+    #article2 {
+        width: 900px;
+        height: 260px;
+        background-color: #03a9f4;
+        float: left;
+    }
+    #article3 {
+        width: 900px;
+        height: 260px;
+        background-color: #039be5;
+        float: left;
+    }
+    #footer {
+        width: 1200px;
+        height: 100px;
+        background-color: #0288d1;
+    }
+
+    /* clearfix */
+    .clearfix::before,
+    .clearfix::after {
+        content: '';
+        display: block;
+        line-height: 0;
+    }
+    .clearfix::after {
+        clear: both;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #e1f5fe;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    #header {
+        height: 100px;
+        background-color: #b3e5fc;
+    }
+    #nav {
+        height: 100px;
+        background-color: #81d4fa;
+    }
+    #main {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        height: 780px;
+    }
+    #aside {
+        width: 30%;
+        height: 780px;
+        background-color: #4fc3f7;
+    }
+    #article1 {
+        width: 70%;
+        height: 260px;
+        background-color: #29b6f6;
+    }
+    #article2 {
+        width: 70%;
+        height: 260px;
+        background-color: #03a9f4;
+    }
+    #article3 {
+        width: 70%;
+        height: 260px;
+        background-color: #039be5;
+    }
+    #footer {
+        height: 100px;
+        background-color: #0288d1;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">grid를 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                grid 시스템을 이용한 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #e1f5fe;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    #header {
+        height: 100px;
+        background-color: #b3e5fc;
+    }
+    #nav {
+        height: 100px;
+        background-color: #81d4fa;
+    }
+    #main {
+        display: grid;
+        grid-template-areas: 
+            "aside article1 article1"
+            "aside article2 article2"
+            "aside article3 article3";
+        grid-template-columns: 300px 900px;
+        grid-template-rows: 260px 260px 260px;
+    }
+    #aside {
+        background-color: #4fc3f7;
+        grid-area: aside;
+    }
+    #article1 {
+        background-color: #29b6f6;
+        grid-area: article1;
+    }
+    #article2 {
+        background-color: #03a9f4;
+        grid-area: article2;
+    }
+    #article3 {
+        background-color: #039be5;
+        grid-area: article3;
+    }
+    #footer {
+        height: 100px;
+        background-color: #0288d1;
+    }
+</code></pre>
+            </div>
+            <summary>결과</summary>
+            <div class="iframe">
+                <iframe height="600" style="width: 100%;" scrolling="no" title="layout03-flaot" src="https://codepen.io/kdb6/embed/LYdjoKR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    See the Pen <a href="https://codepen.io/kdb6/pen/LYdjoKR">
+                    layout03-flaot</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+                    on <a href="https://codepen.io">CodePen</a>.
+                </iframe>
+            </div>
             </div>
         </div>
     </main>
@@ -59,5 +255,9 @@
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
+    <script src="assets/css/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
 </body>
 </html>
