--- a/html/layout05.html
+++ b/html/layout05.html
@@ -7,6 +7,7 @@
     <title>HTML 레퍼런스 북</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/androidstudio.css">
 
     <!-- 구글 아이콘 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -35,8 +36,8 @@
                 <li><a href="layout01.html">레이아웃01</a></li>
                 <li><a href="layout02.html">레이아웃02</a></li>
                 <li><a href="layout03.html">레이아웃03</a></li>
-                <li class="active"><a href="layout04.html">레이아웃04</a></li>
-                <li><a href="layout05.html">레이아웃05</a></li>
+                <li><a href="layout04.html">레이아웃04</a></li>
+                <li class="active"><a href="layout05.html">레이아웃05</a></li>
             </ul>
         </nav>
         <div class="main_refer">
@@ -59,5 +60,9 @@
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
+    <script src="assets/css/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
 </body>
 </html>
